Project-Review-2/k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jd-carenest-routes
  namespace: carenest-dev
spec:
  parentRefs:
  - name: jd-carenest-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth/
    backendRefs:
    - name: auth-service
      port: 3001
  - matches:
    - path:
        type: PathPrefix
        value: /api/appointments/
    backendRefs:
    - name: appointment-service
      port: 3002
  - matches:
    - path:
        type: PathPrefix
        value: /api/prescriptions/
    backendRefs:
    - name: pharmacy-service
      port: 3003
  - matches:
    - path:
        type: PathPrefix
        value: /api/notifications/
    backendRefs:
    - name: notify-service
      port: 3004
  - matches:
    - path:
        type: PathPrefix
        value: /api/ai/
    backendRefs:
    - name: ai-service
      port: 3005
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 80
